--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,10 +1,9 @@
 body {
-  width: 300px;
-  height: 260px;
+  width: 400px;
+  height: 500px;
+  background-color: #f8f8f8;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
